Fixing nav bar and section alignment

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ font-family: 'Nothing You Could Do', cursive; */
     
 } */
 
+
 html {
     scroll-behavior: smooth;
   }
@@ -17,22 +18,17 @@ a:link {
   }
   
   /* visited link */
-  a:visited {
+a:visited {
     color: white;
   }
   
   /* mouse over link */
-  a:hover {
+a:hover {
     color: #b3e0ff;
   }
 
 body {
-    /* background-image: url(https://res.cloudinary.com/ds7vqqwb8/image/upload/v1596727317/Project%202%20-%20CRUD%20Application/131391-light-blue-polygon-pattern-abstract-background_1_gzffcu.jpg); */
-    /* background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover; */
     font-family: Antic Slab, serif;
-    background-color: #000000;
 }
 
 #title {
@@ -40,15 +36,19 @@ body {
     padding-top: 25px;
     padding-bottom: 25px;
     font-family: 'Antic Slab', serif;
-    font-size: 5vw;
+    font-size: 3em;
     max-width: size;;
+}
+
+.section-headings {
+    font-family: 'Antic Slab', serif;
 }
 
 #dx {
     text-align: center;
     font-style: italic;
     font-family: 'Caveat', cursive;
-    font-size: 3vw;
+    font-size: 2em;
 }
 
 
@@ -60,8 +60,8 @@ body {
     padding: 2em;
 }
 
-.nav-item {
-    font-size: 30px;
+li .nav-item {
+    font-size: 2em;
     padding-right: 4vw;
     display: flex;
     justify-content: center;
@@ -72,15 +72,19 @@ body {
     justify-content: center;
 }
 
+.nav-link {
+    font-size: 1em;
+    padding-right: 4vw;
+    display: flex;
+    justify-content: center;
+}
+
 .collapse {
     text-align: center;
 }
 
 #dropdown-container {
-    display: flex;
-    justify-content: center;
     text-align: center;
-    flex-wrap: wrap;
 }
 
 #dropdown-title {
@@ -90,11 +94,13 @@ body {
 #provider-info {
     /* border: 1px solid black; */
     margin: .5em;
+    
 }
 
 #provider-info-ul {
     list-style-type: none;
-    text-align: center
+    text-align: center;
+    font-size: 1em;
 }
 
 #show-selected {
@@ -107,16 +113,15 @@ body {
 }
 
 
-
 .jumbotron {
-    /* background: url('http://placekitten.com/800/500') no-repeat center center; */
-    /* background-size: cover; */
     margin-top: 3em;
     margin-left: 3em;
     margin-right: 3em;
     border-radius: 30%;
     text-align: center;
-    /* display: inline; */
+    max-width: 200px;
+    max-height: 300px;
+    min-width: 200px;
   }
 
   .jumbotron-container {
@@ -125,6 +130,13 @@ body {
       margin-left: 3em;
       margin-right: 3em;
       flex-wrap: wrap;
+      justify-content: center;
+  }
+
+  h5 {
+      font-size: 2vw;
+      padding-left: 2px;
+      padding-right: 5px;
   }
 
   #carouselExampleIndicators {
@@ -134,17 +146,22 @@ body {
 
   .fact {
     font-family: 'Antic Slab', serif;
-    font-size: 30px;
+    font-size: 2vw;
   }
 
   .resource {
     font-family: 'Caveat', cursive;
-    font-size: 20px;
+    font-size: 1vw;
     color: white;
   }
 
   #facts-section {
     display: flex;
     justify-content: center;
+    flex-direction: row;
     flex-wrap: wrap;
+  }
+
+  #section-headings {
+      display: block;
   }
